# RustOnAndroid

./: README.md
RunningRustOnAndroid/: .gitignore  settings.gradle
RunningRustOnAndroid/app/: build.gradle
RunningRustOnAndroid/app/src/androidTest/java/omuomugin/io/runningrustonandroid/: ExampleInstrumentedTest.kt
RunningRustOnAndroid/app/src/main/: AndroidManifest.xml
RunningRustOnAndroid/app/src/main/java/omuomugin/io/runningrustonandroid/: MainActivity.kt
RunningRustOnAndroid/app/src/main/res/layout/: activity_main.xml
RunningRustOnAndroid/app/src/main/res/values/: strings.xml
RunningRustOnAndroid/app/src/test/java/omuomugin/io/runningrustonandroid/: ExampleUnitTest.kt
RunningRustOnAndroid/gradle/wrapper/: gradle-wrapper.properties
RunningRustOnAndroid/rustclient/: build.gradle
RunningRustOnAndroid/rustclient/src/androidTest/java/omuomugin/io/rustclient/: ExampleInstrumentedTest.java
RunningRustOnAndroid/rustclient/src/main/: AndroidManifest.xml
RunningRustOnAndroid/rustclient/src/main/java/omuomugin/io/rustclient/: ExternalMethods.kt  RustClient.kt
RunningRustOnAndroid/rustclient/src/main/res/values/: strings.xml
RunningRustOnAndroid/rustclient/src/test/java/omuomugin/io/rustclient/: ExampleUnitTest.java
RustSample/: .gitignore  Cargo.toml  build.sh  cargo-config.toml
RustSample/src/: lib.rs
